--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="referrer" content="no-referrer">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
   <title>mc mod wiki</title>
 </head>
 <body>
